cefr-core/build_err_utf8.txt
cargo :     Checking 
cefr-core v0.1.0 (F:\
equb_English_learning
\windows\cefr-core)
At line:1 char:1
+ cargo check --bin b
uild_dict --features 
build-binary 2>&1 | O
ut-File  ...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking ce...dows\    
cefr-core):Strin    g
) [], RemoteExc    ep
tion
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
error[E0432]: unresol
ved import `phf`
 --> src\discourse.rs
:4:5
  |
4 | use phf::phf_set;
  |     ^^^ use of un
resolved module or un
linked crate `phf`
  |
  = help: if you want
ed to use a crate nam
ed `phf`, use `cargo 
add phf` to add it to
 your `Cargo.toml`

warning: unexpected `
cfg` condition value:
 `console_error_panic
_hook`
   --> src\lib.rs:224
:11
    |
224 |     #[cfg(featu
re = "console_error_p
anic_hook")]
    |           ^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^
    |
    = note: expected 
values for `feature` 
are: `build-binary`, 
`default`, and `rusql
ite`
    = help: consider 
adding `console_error
_panic_hook` as a fea
ture in `Cargo.toml`
    = note: see <http
s://doc.rust-lang.org
/nightly/rustc/check-
cfg/cargo-specifics.h
tml> for more informa
tion about checking c
onditional configurat
ion
    = note: `#[warn(u
nexpected_cfgs)]` on 
by default

error[E0433]: failed 
to resolve: use of un
resolved module or un
linked crate `phf`
 --> src\names_code.r
s:1:22
  |
1 | static COMMON_NAM
ES: phf::Set<&'static
 str> = phf_set! {
  |                  
    ^^^ use of unreso
lved module or unlink
ed crate `phf`
  |
  = help: if you want
ed to use a crate nam
ed `phf`, use `cargo 
add phf` to add it to
 your `Cargo.toml`

Some errors have deta
iled explanations: E0
432, E0433.
For more information 
about an error, try `
rustc --explain E0432
`.
warning: `cefr-core` 
(lib) generated 1 war
ning
error: could not comp
ile `cefr-core` (lib)
 due to 2 previous er
rors; 1 warning emitt
ed
